--- a/app/views/books/_newform.html.erb
+++ b/app/views/books/_newform.html.erb
@@ -1,11 +1,24 @@
-<%= form_for(book) do |f| %>
+<h2>New book</h2>
+
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= book.errors.count %>errors prohibited this obj from being saved:</h2>
+      <ul>
+      <% book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+<%= form_for(@book) do |f| %>
 	<div class="field row">
 		<%= f.label :title %>
 		<%= f.text_field :title, class: "col-xs-12 book_title" %>
 	</div>
 
 	<div class="field row">
-		<%= f.label :body %> <!-- ここを変更 -->
+		<%= f.label :opinion %> <!-- ここを変更 -->
 		<%= f.text_area :body, class: "col-xs-12 book_body" %>
 	</div>
 
