--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,12 +2,11 @@
 <div class="row">
 	<div class="col-xs-3">
 
-		<h2>User info</h2>
-		<%= render 'users/profile' %>
 
-		<h2>New book</h2>
-		<%= render 'books/newform' %>
+		<%= render 'users/profile', user: current_user %>
+		<!--メモ　右側の指定に注意。そこを間違えるとエラーが発生して表示されない -->
 
+		<%= render 'books/newform', book: @book %>
 	</div>
 
 	<div class="col-xs-9">
@@ -23,8 +22,15 @@
 					</td>
 					<td><%= link_to @book.title, @book %></td>
 					<td><%= @book.body %></td>
-					<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-					<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
+					<td><% if @book.user == current_user %>
+						<%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %>
+						<% end %>
+					</td>
+					<td>
+                        <% if @book.user == current_user %>
+						<%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>
+						<% end %>
+						</td>
 				</tr>
 			</table>
 
