--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,16 @@
-<h2>User info</h2>
+<div class="row">
+	<div class="col-xs-3">
+
+
+
 <%= render 'users/profile', user: current_user %>
 <!--メモ　右側の指定に注意。そこを間違えるとエラーが発生して表示されない -->
 
-<h2>New book</h2>
-<%= render 'newform', book: @book %>
 
+<%= render 'books/newform', book: @book %>
+</div>
 
+	<div class="col-xs-9">
 <h2>Users</h2>
 <!--users一覧 -->
 <table class="table">
@@ -28,4 +33,5 @@
 	</tbody>
 </table>
 <!--users一覧 -->
-
+</div>
+</div>
