--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,15 @@
-<h2>User info</h2>
+<div class="row">
+	<div class="col-xs-3">
+
 <%= render 'users/profile', user: @user %>
 <!--同コントローラーのviewで表示ならusersは省略可 -->
 
-<h2>New book</h2>
-<%= render 'books/newform', book: @book %>
+
+<%= render 'books/newform', book: @books %>
+
+</div>
+
+<div class="col-xs-9">
 
 <h2>Books</h2>
 <!--books一覧 -->
@@ -18,7 +24,7 @@
 	</thead>
 
 	<tbody>
-		<% books.each do |book| %>
+		<% @books.each do |book| %>
 		<tr>
 			<td>
 				<%= link_to (book.user) do %>
@@ -31,5 +37,7 @@
 		<% end %>
 	</tbody>
 </table>
+</div>
+</div>
 <!--books一覧 -->
 
